--- a/spec/dummy/app/views/custom_jobs/new.html.haml
+++ b/spec/dummy/app/views/custom_jobs/new.html.haml
@@ -3,6 +3,8 @@
 = form_tag(controller: 'custom_jobs', action: 'create', method: 'post') do
   = label_tag 'name'
   = text_field_tag 'name'
+  = label_tag 'delay'
+  = text_field_tag 'delay'
   = label_tag 'message'
   = text_field_tag 'message'
   = submit_tag "Create this delayed job"
