--- a/app/views/delayed_job_admin/jobs/index.html.haml
+++ b/app/views/delayed_job_admin/jobs/index.html.haml
@@ -6,19 +6,20 @@
   %table.jobs
     %thead
       %tr
-        %td= t('delayed_job_admin.delayed_jobs.table.id')
-        %td= t('delayed_job_admin.delayed_jobs.table.priority')
-        %td= t('delayed_job_admin.delayed_jobs.table.attempts')
-        %td= t('delayed_job_admin.delayed_jobs.table.handler')
-        %td= t('delayed_job_admin.delayed_jobs.table.last_error')
-        %td= t('delayed_job_admin.delayed_jobs.table.run_at')
-        %td= t('delayed_job_admin.delayed_jobs.table.locked_at')
-        %td= t('delayed_job_admin.delayed_jobs.table.queue')
-        %td= t('delayed_job_admin.delayed_jobs.table.created_at')
-        %td= t('delayed_job_admin.delayed_jobs.table.updated_at')
+        %th= t('delayed_job_admin.delayed_jobs.table.id')
+        %th= t('delayed_job_admin.delayed_jobs.table.priority')
+        %th= t('delayed_job_admin.delayed_jobs.table.attempts')
+        %th= t('delayed_job_admin.delayed_jobs.table.handler')
+        %th= t('delayed_job_admin.delayed_jobs.table.last_error')
+        %th= t('delayed_job_admin.delayed_jobs.table.run_at')
+        %th= t('delayed_job_admin.delayed_jobs.table.locked_at')
+        %th= t('delayed_job_admin.delayed_jobs.table.queue')
+        %th= t('delayed_job_admin.delayed_jobs.table.created_at')
+        %th= t('delayed_job_admin.delayed_jobs.table.updated_at')
+        %th= t('delayed_job_admin.delayed_jobs.table.status')
     %tbody
       - @jobs.each do |job|
-        %tr
+        %tr{ id: "job_id_#{job.id}" }
           %td= job.id
           %td= job.priority
           %td= job.attempts
@@ -29,3 +30,7 @@
           %td= job.queue
           %td= job.created_at
           %td= job.updated_at
+          %td{ class: job.status.to_s }
+            = job.status
+            - if job.status.to_s == 'failing'
+              = link_to t('delayed_job_admin.delayed_jobs.table.see_more'), class: see_more_link
