Add engine link to dummy app page.

--- a/spec/dummy/app/views/custom_jobs/new.html.haml
+++ b/spec/dummy/app/views/custom_jobs/new.html.haml
@@ -8,3 +8,5 @@
   = label_tag 'message'
   = text_field_tag 'message'
   = submit_tag "Create this delayed job"
+
+= link_to 'Jobs list', delayed_job_admin.jobs_path
