--- a/app/views/delayed_job_admin/jobs/index.html.haml
+++ b/app/views/delayed_job_admin/jobs/index.html.haml
@@ -1,9 +1,9 @@
 %h1= t('delayed_job_admin.delayed_jobs.titles.index')
 
 - if @jobs.empty?
-  = t('delayed_job_admin.delayed_jobs.no_queued_jobs')
+  %p= t('delayed_job_admin.delayed_jobs.no_queued_jobs')
 - else
-  %table.jobs
+  %table.delayed_job_admin_jobs
     %thead
       %tr
         %th= t('delayed_job_admin.delayed_jobs.table.id')
@@ -19,7 +19,7 @@
         %th= t('delayed_job_admin.delayed_jobs.table.status')
     %tbody
       - @jobs.each do |job|
-        %tr{ id: "job_id_#{job.id}" }
+        %tr{ id: "delayed_job_admin_job_id_#{job.id}" }
           %td= job.id
           %td= job.priority
           %td= job.attempts
@@ -33,4 +33,7 @@
           %td{ class: job.status.to_s }
             = job.status
             - if job.status.to_s == 'failing'
-              = link_to t('delayed_job_admin.delayed_jobs.table.see_more'), class: see_more_link
+              = link_to t('delayed_job_admin.delayed_jobs.table.failing_job.see_more'), class: 'delayed_job_admin_see_more_link'
+              = link_to t('delayed_job_admin.delayed_jobs.table.failing_job.destroy'), class: 'delayed_job_admin_destroy_link'
+
+= link_to t('delayed_job_admin.links.archived_jobs'), archived_jobs_path, class: 'delayed_job_admin_navigation_link'
