--- a/spec/dummy/app/views/custom_jobs/new.html.haml
+++ b/spec/dummy/app/views/custom_jobs/new.html.haml
@@ -8,5 +8,7 @@
   = label_tag 'message'
   = text_field_tag 'message'
   = submit_tag "Create this delayed job"
+%p
+  To create a job that will raise an error on processing please specify message text of 'ERROR'
 
 = link_to 'Jobs list', delayed_job_admin.jobs_path
