--- a/app/views/delayed_job_admin/jobs/index.html.haml
+++ b/app/views/delayed_job_admin/jobs/index.html.haml
@@ -17,14 +17,15 @@
         %th= t('delayed_job_admin.delayed_jobs.table.created_at')
         %th= t('delayed_job_admin.delayed_jobs.table.updated_at')
         %th= t('delayed_job_admin.delayed_jobs.table.status')
+        %th
     %tbody
       - @jobs.each do |job|
         %tr{ id: "delayed_job_admin_job_id_#{job.id}" }
           %td= job.id
           %td= job.priority
           %td= job.attempts
-          %td= job.handler
-          %td= job.last_error
+          %td= render 'shared/truncated_value', { value: job.handler, length: 50 }
+          %td= render 'shared/truncated_value', { value: job.last_error, length: 50 }
           %td= job.run_at
           %td= job.locked_at
           %td= job.queue
@@ -32,8 +33,8 @@
           %td= job.updated_at
           %td{ class: job.status.to_s }
             = job.status
+          %td
             - if job.status.to_s == 'failing'
-              = link_to t('delayed_job_admin.delayed_jobs.table.failing_job.see_more'), class: 'delayed_job_admin_see_more_link'
-              = link_to t('delayed_job_admin.delayed_jobs.table.failing_job.destroy'), class: 'delayed_job_admin_destroy_link'
+              = link_to t('delayed_job_admin.delayed_jobs.table.failing_job.destroy'), job_path(job), confirm: 'Are you sure?', method: :delete
 
 = link_to t('delayed_job_admin.links.archived_jobs'), archived_jobs_path, class: 'delayed_job_admin_navigation_link'
