Reference engine assets from dummy app.

--- a/app/views/delayed_job_admin/jobs/index.html.haml
+++ b/app/views/delayed_job_admin/jobs/index.html.haml
@@ -1,3 +1,5 @@
+= stylesheet_link_tag    "delayed_job_admin/jobs"
+= javascript_include_tag "delayed_job_admin/jobs"
 %h1= t('delayed_job_admin.delayed_jobs.titles.index')
 
 - if @jobs.empty?
