--- a/app/assets/javascripts/delayed_job_admin/poll_job.js.erb
+++ b/app/assets/javascripts/delayed_job_admin/poll_job.js.erb
@@ -1,21 +1,26 @@
+<% environment.context_class.instance_eval { include Rails.application.routes.url_helpers } %>
 var DELAYED_JOB_ADMIN = (function(dja, $) {
 
-  var base_route = <%= delayed_job_admin.jobs_path %>;
+  var base_route = <%= "#{delayed_job_admin_path}/jobs" %>;
   var default_poll_interval_in_secs = <%= DelayedJobAdmin::default_poll_interval_in_secs %>;
 
-  dja.poll_job = function(job_id, success, failure, poll_interval) {
+  dja.poll_job = function(job_id, success, failure, processing, poll_interval) {
 
     success = (typeof success === 'function') ? success : function() {};
     failure = (typeof failure === 'function') ? failure : function() {};
+    process = (typeof process === 'function') ? process : function() {};
     poll_interval = (typeof poll_interval !== 'undefined') ? poll_interval : default_poll_interval_in_secs*1000;
     var status_route = base_route + '/' + job_id + '/status';
 
     var on_status_update = function(data) {
-      if(data.status==='failing') {
-        failure();
-      } else if(data.status==='none') {
-        success();
+      if(data.status==='none') {
+        success(data);
+      } else if(data.status==='failing') {
+        failure(data);
       } else {
+        if(data.status==='processing') {
+          process(data);
+        }
         window.setTimeout(poll, poll_interval);
       }
     };
