Small tweak to expand/collapse function on tables.

--- a/app/views/shared/_truncated_value.html.haml
+++ b/app/views/shared/_truncated_value.html.haml
@@ -1,9 +1,9 @@
 %span.delayed_job_admin_value.hidden
   = value
   %a{ href: '#', class: 'delayed_job_admin_toggle_info' }
-    = 'Collapse'
+    = t('delayed_job_admin.links.less')
 %span.delayed_job_admin_display_value
   - if value
     = value[0...length]
     %a{ href: '#', class: 'delayed_job_admin_toggle_info' }
-      = '...'
+      = t('delayed_job_admin.links.more')
