--- a/app/views/delayed_job_admin/shared/index.html.haml
+++ b/app/views/delayed_job_admin/shared/index.html.haml
@@ -1,5 +1,5 @@
-= stylesheet_link_tag    "application"
-= javascript_include_tag "application"
+= stylesheet_link_tag    "delayed_job_admin/application"
+= javascript_include_tag "delayed_job_admin/application"
 - base_key = "delayed_job_admin.#{@archive ? 'archived_' : ''}delayed_jobs"
 
 %h1= t("#{base_key}.titles.index")
