Only load necessary JS and CSS on index page.
Previously I had included the delayed_job_admin/application.js and
delayed_job_admin/application.css files on the index page, but this lead
to some weirdness when these pages were mounted inside ExamTime,
presumably due to the reloading of jQuery.

--- a/app/views/delayed_job_admin/shared/index.html.haml
+++ b/app/views/delayed_job_admin/shared/index.html.haml
@@ -1,5 +1,5 @@
-= stylesheet_link_tag    "delayed_job_admin/application"
-= javascript_include_tag "delayed_job_admin/application"
+= stylesheet_link_tag    "delayed_job_admin/jobs"
+= javascript_include_tag "delayed_job_admin/jobs"
 - base_key = "delayed_job_admin.#{@archive ? 'archived_' : ''}delayed_jobs"
 
 %h1= t("#{base_key}.titles.index")
